--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,8 @@ body {
 }
 
 #container {
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
   padding: 10px;
-  background-color: beige;
+  // background-color: beige;
 }
