search button add

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,11 @@
   align-items: center;
 }
 
+#container{
+  width: 1240px;
+  margin: 0 auto;
+}
+
 .meal-container{
   display: flex;
   justify-content: space-between;
