--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,31 @@
 <div id="container">
   <div id="header">
-    <h1>Meal Finder</h1>
+    <h1 class="text-blue-300">Meal Finder</h1>
   </div>
-  <div>
-    <mat-form-field style="width: 400px">
-      <mat-label>Search meal by starting letter</mat-label>
-      <input matInput [(ngModel)]="searchText" />
-    </mat-form-field>
+
+  <div class="flex items-center justify-center my-6">
+    <div class="relative w-full max-w-md">
+      <!-- Search Input -->
+      <input
+        type="text"
+        [(ngModel)]="searchText"
+        placeholder="Search meal"
+        class="w-full px-4 py-2 text-gray-700 bg-white border border-gray-300 rounded-l-lg focus:ring-2 focus:ring-blue-500 focus:outline-none"
+      />
+      <!-- Search Button -->
+      <button
+        (click)="onSearch()"
+        class="absolute top-0 right-0 px-4 py-2 text-white bg-blue-500 hover:bg-blue-600 rounded-r-lg"
+      >
+        Search
+      </button>
+    </div>
   </div>
 
   <div class="meal-container">
     <div id="meals">
       <app-meal-list
-        [searchText]="searchText"
+        [meals]="meals"
         (mealSelected)="addToFavorites($event)"
       ></app-meal-list>
     </div>
@@ -20,14 +33,13 @@
       <h2>My Favorites</h2>
 
       <h1 *ngIf="favouriteMeals.length == 0">No favourites yet!</h1>
-      <mat-list role="list">
-        <mat-list-item
-          id="list-item"
-          *ngFor="let meal of favouriteMeals"
-          role="listitem"
-          >{{ meal.strMeal }}</mat-list-item
-        >
-      </mat-list>
+
+      <mat-chip-set aria-label="favourites selection">
+        <mat-chip color="primary" *ngFor="let meal of favouriteMeals">
+          <img matChipAvatar [src]="meal.strMealThumb" [alt]="meal.strMeal" />
+          {{ meal.strMeal }}
+        </mat-chip>
+      </mat-chip-set>
     </div>
   </div>
 </div>
